@@ -11,7 +11,6 @@ oclHashcat build documentation
 
 To compile **oclHashcat** the following third party libraries are required:
 
-- AMD-APP-SDK v3.0 ( http://developer.amd.com/tools-and-sdks/opencl-zone/amd-accelerated-parallel-processing-app-sdk/ )
 - ADL_SDK v8.0 ( http://developer.amd.com/tools-and-sdks/graphics-development/display-library-adl-sdk/ )
 - NVAPI R352 ( https://developer.nvidia.com/nvapi )
 - GDK v352_55 ( https://developer.nvidia.com/gpu-deployment-kit )
@@ -23,7 +22,6 @@ The following files are needed inside the *deps/tmp* directory:
     ADL_SDK8.zip
     R352-developer.zip
     gdk_linux_amd64_352_55_release.run
-    AMD-APP-SDKInstaller-v3.0.130.135-GA-linux64.tar.bz2
     
 # Building oclHashcat
 First get a copy of **oclHashcat** repository
